:building_construction: Migration from beta

--- a/src/app.css
+++ b/src/app.css
@@ -1,79 +1,81 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import 'tailwindcss';
+@plugin "daisyui" {
+    themes: colectividapp --default, dark;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/*noinspection ALL*/
+@plugin "daisyui/theme" {
+    name: "colectividapp";
+    color-scheme: "light";
+    exclude: rootscrollgutter, rootcolor;
+    --color-base-100: oklch(98% 0.001 106.423);
+    --color-base-200: #F7F6F0;
+    --color-base-300: oklch(52% 0.154 150.069);
+    --color-base-content: oklch(21% 0.006 56.043);
+    --color-primary: oklch(52% 0.154 150.069);
+    --color-primary-content: oklch(98% 0.001 106.423);
+    --color-secondary: oklch(69% 0.17 162.48);
+    --color-secondary-content: oklch(98% 0.003 247.858);
+    --color-accent: oklch(66% 0.179 58.318);
+    --color-accent-content: oklch(14.125% 0.023 185.713);
+    --color-neutral: oklch(52% 0.154 150.069);
+    --color-neutral-content: oklch(98% 0.003 247.858);
+    --color-info: oklch(72.06% 0.191 231.6);
+    --color-info-content: oklch(0% 0 0);
+    --color-success: oklch(64.8% 0.15 160);
+    --color-success-content: oklch(98% 0.003 247.858);
+    --color-warning: oklch(84.71% 0.199 83.87);
+    --color-warning-content: oklch(0% 0 0);
+    --color-error: oklch(71.76% 0.221 22.18);
+    --color-error-content: oklch(0% 0 0);
+    --radius-selector: 1rem;
+    --radius-field: 0.5rem;
+    --radius-box: 1rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+    --border: 1px;
+    --depth: 0;
+    --noise: 0;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/*noinspection ALL*/
+@font-face {
+    font-family: 'Delius';
+    font-style: normal;
+    src: url('/fonts/Delius-Regular.ttf') format('truetype');
+}
+
+/*noinspection ALL*/
+@font-face {
+    font-family: 'Delius Unicase';
+    font-style: normal;
+    src: url('/fonts/DeliusUnicase/Delius_Unicase-Regular.ttf') format('truetype');
+}
+
+/*noinspection ALL*/
+@font-face {
+    font-family: 'Delius Unicase';
+    font-style: bold;
+    src: url('/fonts/DeliusUnicase/Delius_Unicase-Bold.ttf') format('truetype');
+}
+
+/*noinspection ALL*/
+@font-face {
+    font-family: 'Poiret One';
+    font-style: normal;
+    src: url('/fonts/PoiretOne-Regular.ttf') format('truetype');
+}
+
+/*noinspection ALL*/
+@font-face {
+    font-family: 'Scope One';
+    font-style: normal;
+    src: url('/fonts/ScopeOne-Regular.ttf') format('truetype');
+}
+
+/*noinspection ALL*/
+@font-face {
+    font-family: 'Shadows Into Light';
+    font-style: normal;
+    src: url('/fonts/ShadowsIntoLight-Regular.ttf') format('truetype');
 }
