--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,13 @@
 @import 'tailwindcss';
 @plugin "daisyui" {
-    themes: colectividapp --default, dark;
+    themes: colectividapp --default, dim;
 }
 
 /*noinspection ALL*/
 @plugin "daisyui/theme" {
     name: "colectividapp";
     color-scheme: "light";
+    --font-sans: "Delius";
     exclude: rootscrollgutter, rootcolor;
     --color-base-100: oklch(98% 0.001 106.423);
     --color-base-200: #F7F6F0;
@@ -78,4 +79,23 @@
     font-family: 'Shadows Into Light';
     font-style: normal;
     src: url('/fonts/ShadowsIntoLight-Regular.ttf') format('truetype');
+}
+
+
+:root:has(input.theme-controller[value=dim]:checked),[data-theme="dim"] { /* mytheme is the name of the custom theme */
+    .leaflet-layer,
+    .leaflet-control-zoom-in,
+    .leaflet-control-zoom-out,
+    .leaflet-control-attribution {
+        filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
+    }
+
+    .leaflet-container {
+        background: var(--color-base-200);
+    }
+}
+
+
+.card {
+    border: 1px solid var(--color-base-300);
 }
